cambios para el día de hoy jajajaj

--- a/mi-banco/src/main/res/values-es/strings.xml
+++ b/mi-banco/src/main/res/values-es/strings.xml
@@ -1090,4 +1090,5 @@
     <string name="change">Cambiar</string>
     <string name="send_transfer">Enviar transferencia</string>
     <string name="choose_account">Escoge una cuenta</string>
+    <string name="select_account_subtitle">Cantidad a ser transferida</string>
 </resources>
